# squawkbus-python

./: .gitignore  README.md  mkdocs.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-doc.txt
docs/: 404.html  index.html  sitemap.xml
docs/api/: index.html
docs/authentication/: index.html
docs/getting-started/: index.html
docs/message-handlers/: index.html
docs/search/: search_index.json
docs/ssl/: index.html
documentation/: authentication.md  getting-started.md  index.md  message-handlers.md  ssl.md
documentation/api/: index.md
examples/: README.md  auth_notifier.py  auth_publisher.py  auth_subscriber.py  authenticated_notifier.py  authenticated_publisher.py  authenticated_subscriber.py  notifier.py  publisher.py  simple_notifier.py  simple_publisher.py  simple_subscriber.py  subscriber.py
examples/auth/: README.md  notifier.py  publisher.py  subscriber.py
examples/simple/: README.md  example_publish.py  example_subscriber.py  notifier.py  publisher.py  selectfeed.py  sender.py  subscriber.py  ws_publisher.py  ws_subscriber.py
examples/ssl/: README.md  notifier.py  publisher.py  subscriber.py
src/squawkbus/: __init__.py  base_client.py  callback_client.py  client.py  data_packet.py  data_reader.py  data_writer.py  frame_stream.py  messages.py  socket_client.py  socket_stream.py  types.py  utils.py  websocket_client.py  websocket_stream.py
tests/: test_frame_stream.py  test_messages.py
