[project]
name = "squawkbus"
version = "1.0.0"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
description = "Reference implementations for option pricing formula"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.optional-dependencies]
websockets = ["websockets >= 14.2"]

[project.urls]
Homepage = "https://github.com/squawkbus/squawkbus-python"
Issues = "https://github.com/squawkbus/squawkbus-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
