[project]
name = "squawkbus"
version = "1.0.0"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
description = "A squawkbus client"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.optional-dependencies]
websockets = [
  "websockets >= 14.2"
]
examples = [
    "aioconsole",
]
dev = [
    "pytest",
    "mypy",
    "pylint",
    "pytest-asyncio",
]
doc = [
    "jetblack-markdown>=1.2.0,<2.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.5.45,<10.0.0",
]

[project.urls]
Homepage = "https://github.com/squawkbus/squawkbus-python"
Issues = "https://github.com/squawkbus/squawkbus-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# pylint
[tool.pylint.main]
py-version = "3.11"
jobs = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
]

# pytest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "function"

# mypy
[tool.mypy]
files = [ "src/squawkbus", "tests", "examples" ]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true